force-app/main/default/objects/Process__c/Process__c.object-meta.xml
<CustomObject>
    <label>Process</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extracted Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>