force-app/main/default/objects/Process__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <label>AI Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>