force-app/main/default/objects/Process__c/fields/Start_Step__c.field-meta.xml
<CustomField>
    <fullName>Start_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Start Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>