force-app/main/default/objects/Process__c/fields/Start_Step_Id__c.field-meta.xml
<CustomField>
    <fullName>Start_Step_Id__c</fullName>
    <label>Start Step Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>