force-app/main/default/objects/Process__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>A short summary of the process</description>
    <label>Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>