force-app/main/default/objects/Process__c/fields/Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Validation_Result__c</fullName>
    <label>Validation Result</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>