force-app/main/default/objects/Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Id__c</columns>
    <columns>NAME</columns>
    <columns>Version__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>